==> disco4now/ArmmiteF407VGT/ArmmiteF407VGT/Src/Serial.c <==
#include "MMBasic_Includes.h"
#include "Hardware_Includes.h"
#include "main.h"

void SerialOpen(char *spec) {
	int baud, i, inv, oc, s2, de, parity, b7, bufsize, ilevel;
	char *interrupt, *TXinterrupt;
	GPIO_InitTypeDef GPIO_InitStruct;

	getargs(&spec, 21, ":,");										// this is a macro and must be the first executable stmt
	if(argc != 2 && (argc & 0x01) == 0) error("COM specification");

    b7 = de = parity = inv = oc = s2 = false;
    for(i = 0; i < 6; i++) {
    	if(str_equal(argv[argc - 1], "OC")) { oc = true; argc -= 2; }	// get the open collector option
    	if(str_equal(argv[argc - 1], "EVEN")) {
    		if(parity)error("Syntax");
    		else {parity = 1; argc -= 2; }	// set even parity
    	}
    	if(str_equal(argv[argc - 1], "ODD")) {
    		if(parity)error("Syntax");
    		else {parity = 2; argc -= 2; }	// set even parity
    	}
    	if(str_equal(argv[argc - 1], "S2")) { s2 = true; argc -= 2; }	// get the two stop bit option
    	if(str_equal(argv[argc - 1], "7BIT")) { b7 = true; argc -= 2; }	// set the 7 bit byte option
    }

	if(argc < 1 || argc > 13) error("COM specification");

	if(argc >= 3 && *argv[2]) {
		baud = getinteger(argv[2]);									// get the baud rate as a number
		if(baud<2400)error("2400 baud is minimum supported");
	} else
		baud = COM_DEFAULT_BAUD_RATE;

	if(argc >= 5 && *argv[4])
		bufsize = getinteger(argv[4]);								// get the buffer size as a number
	else
		bufsize = COM_DEFAULT_BUF_SIZE;

	if(argc >= 7) {
    	InterruptUsed = true;
		interrupt = GetIntAddress(argv[6]);							// get the interrupt location
	} else
		interrupt = NULL;

	if(argc >= 9) {
		ilevel = getinteger(argv[8]);								// get the buffer level for interrupt as a number
		if(ilevel < 1 || ilevel > bufsize) error("COM specification");
	} else
		ilevel = 1;

	if(argc >= 11) {
    	InterruptUsed = true;
		TXinterrupt = GetIntAddress(argv[10]);							// get the interrupt location
	} else
		TXinterrupt = NULL;


	if(spec[3] == '1') {
	///////////////////////////////// this is COM1 ////////////////////////////////////

		if(com1) error("Already open");
        CheckPin(COM1_RX_PIN, CP_CHECKALL);
        CheckPin(COM1_TX_PIN, CP_CHECKALL);

 		com1_buf_size = bufsize;									// extracted from the comspec above
		com1_interrupt = interrupt;
		com1_ilevel	= ilevel;
		com1_TX_interrupt = TXinterrupt;
		com1_TX_complete = false;

		// setup for receive
		com1Rx_buf = GetMemory(com1_buf_size);						// setup the buffer
		com1Rx_head = com1Rx_tail = 0;
		ExtCfg(COM1_RX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use


		// setup for transmit
		com1Tx_buf = GetMemory(TX_BUFFER_SIZE);						// setup the buffer
		com1Tx_head = com1Tx_tail = 0;
		ExtCfg(COM1_TX_PIN, EXT_COM_RESERVED, 0);
        if(de) error("COM specification");
      if (HAS_64PINS && Feather){
          /**USART3 GPIO Configuration
          PB10     ------> USART3_TX
          PB11     ------> USART3_RX
          */
          setupuart(&huart3, USART3, de, inv, s2, parity, b7, baud);
          if(Option.SerialPullup){
              GPIO_InitStruct.Pin = GPIO_PIN_11;
              GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
              GPIO_InitStruct.Pull = GPIO_PULLUP;
              GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
              GPIO_InitStruct.Alternate = GPIO_AF7_USART3;
              HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);
          }
          if(oc){
          	GPIO_InitStruct.Pin = GPIO_PIN_10;
          	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
          	GPIO_InitStruct.Pull = GPIO_NOPULL;
          	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
          	GPIO_InitStruct.Alternate = GPIO_AF7_USART3;
          	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);
          }
          HAL_NVIC_SetPriority(USART3_IRQn, 0, 0);
          HAL_NVIC_EnableIRQ(USART3_IRQn);
          huart3.Instance->CR1 |= USART_CR1_RXNEIE;


      }else{

        /**USART1 GPIO Configuration
        PA9     ------> USART1_TX
        PA10     ------> USART1_RX
        */
        setupuart(&huart1, USART1, de, inv, s2, parity, b7, baud);
        if(Option.SerialPullup){
            GPIO_InitStruct.Pin = RXD1_Pin;
            GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
            GPIO_InitStruct.Pull = GPIO_PULLUP;
            GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
            GPIO_InitStruct.Alternate = GPIO_AF7_USART1;
            HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
        }
        if(oc){
        	GPIO_InitStruct.Pin = TXD1_Pin;
        	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
        	GPIO_InitStruct.Pull = GPIO_NOPULL;
        	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        	GPIO_InitStruct.Alternate = GPIO_AF7_USART1;
        	HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
        }
        HAL_NVIC_SetPriority(USART1_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(USART1_IRQn);
        huart1.Instance->CR1 |= USART_CR1_RXNEIE;
      }
        com1 = true;
	}
    if (spec[3] == '2') {
	///////////////////////////////// this is COM2 ////////////////////////////////////

		if(com2) error("Already open");
        CheckPin(COM2_RX_PIN, CP_CHECKALL);
        CheckPin(COM2_TX_PIN, CP_CHECKALL);

 		com2_buf_size = bufsize;									// extracted from the comspec above
		com2_interrupt = interrupt;
		com2_ilevel	= ilevel;
		com2_TX_interrupt = TXinterrupt;
		com2_TX_complete = false;

		// setup for receive
		com2Rx_buf = GetMemory(com2_buf_size);						// setup the buffer
		com2Rx_head = com2Rx_tail = 0;
		ExtCfg(COM2_RX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use


		// setup for transmit
		com2Tx_buf = GetMemory(TX_BUFFER_SIZE);						// setup the buffer
		com2Tx_head = com2Tx_tail = 0;
		ExtCfg(COM2_TX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use
		com2_bit9 = com2_mode = 0;
        if(parity)  com2_mode |= COM2_9B;
        setupuart(&huart6, USART6, de, inv, s2, parity, b7, baud);
        if(Option.SerialPullup){
            /**USART6 GPIO Configuration
            PC6     ------> USART6_TX
            PC7     ------> USART6_RX
            */
            GPIO_InitStruct.Pin = GPIO_PIN_6|GPIO_PIN_7;
            GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
            GPIO_InitStruct.Pull = GPIO_PULLUP;
            GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
            GPIO_InitStruct.Alternate = GPIO_AF8_USART6;
            HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);
        }
        if(oc){
        	GPIO_InitStruct.Pin = GPIO_PIN_6;
        	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
        	GPIO_InitStruct.Pull = GPIO_NOPULL;
        	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        	GPIO_InitStruct.Alternate = GPIO_AF8_USART6;
        	HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);
        }
        HAL_NVIC_SetPriority(USART6_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(USART6_IRQn);
        huart6.Instance->CR1 |= USART_CR1_RXNEIE;
        com2 = true;
	}
    if (spec[3] == '3') {
	///////////////////////////////// this is COM3 ////////////////////////////////////

		if(com3) error("Already open");
        CheckPin(COM3_RX_PIN, CP_CHECKALL);
        CheckPin(COM3_TX_PIN, CP_CHECKALL);

 		com3_buf_size = bufsize;									// extracted from the comspec above
		com3_interrupt = interrupt;
		com3_ilevel	= ilevel;
		com3_TX_interrupt = TXinterrupt;
		com3_TX_complete = false;

		// setup for receive
		com3Rx_buf = GetMemory(com3_buf_size);						// setup the buffer
		com3Rx_head = com3Rx_tail = 0;
		ExtCfg(COM3_RX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use


		// setup for transmit
		com3Tx_buf = GetMemory(TX_BUFFER_SIZE);						// setup the buffer
		com3Tx_head = com3Tx_tail = 0;
		ExtCfg(COM3_TX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use
		com3_bit9 = com3_mode = 0;
        if(parity)  com3_mode |= COM2_9B;
        setupuart(&huart4, UART4, de, inv, s2, parity, b7, baud);
        if(Option.SerialPullup){
            /**UART4 GPIO Configuration
            PA0-WKUP     ------> UART4_TX
            PA1     ------> UART4_RX
            */
            GPIO_InitStruct.Pin = GPIO_PIN_1;
            GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
            GPIO_InitStruct.Pull = GPIO_PULLUP;
            GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
            GPIO_InitStruct.Alternate = GPIO_AF8_UART4;
            HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
        }
        if(oc){
        	GPIO_InitStruct.Pin = GPIO_PIN_0;
        	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
        	GPIO_InitStruct.Pull = GPIO_NOPULL;
        	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        	GPIO_InitStruct.Alternate = GPIO_AF8_UART4;
        	HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
        }
        HAL_NVIC_SetPriority(UART4_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(UART4_IRQn);
        huart4.Instance->CR1 |= USART_CR1_RXNEIE;
        com3 = true;
	}

    if (spec[3] == '4') {
	///////////////////////////////// this is COM4 ////////////////////////////////////

		if(com4) error("Already open");
        CheckPin(COM4_RX_PIN, CP_CHECKALL);
        CheckPin(COM4_TX_PIN, CP_CHECKALL);

 		com4_buf_size = bufsize;									// extracted from the comspec above
		com4_interrupt = interrupt;
		com4_ilevel	= ilevel;
		com4_TX_interrupt = TXinterrupt;
		com4_TX_complete = false;

		// setup for receive
		com4Rx_buf = GetMemory(com4_buf_size);						// setup the buffer
		com4Rx_head = com4Rx_tail = 0;
		ExtCfg(COM4_RX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use


		// setup for transmit
		com4Tx_buf = GetMemory(TX_BUFFER_SIZE);						// setup the buffer
		com4Tx_head = com4Tx_tail = 0;
		ExtCfg(COM4_TX_PIN, EXT_COM_RESERVED, 0);                   // reserve the pin for com use
		com4_bit9 = com4_mode = 0;
        if(parity)  com4_mode |= COM2_9B;
        setupuart(&huart2, USART2, de, inv, s2, parity, b7, baud);
        if(Option.SerialPullup){
            /**UART2 GPIO Configuration
            PA2     ------> UART2_TX
            PA3     ------> UART2_RX
            */
            GPIO_InitStruct.Pin = GPIO_PIN_3;
            GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
            GPIO_InitStruct.Pull = GPIO_PULLUP;
            GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
            GPIO_InitStruct.Alternate = GPIO_AF7_USART2;
            HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
        }
        if(oc){
        	GPIO_InitStruct.Pin = GPIO_PIN_2;
        	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
        	GPIO_InitStruct.Pull = GPIO_NOPULL;
        	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        	GPIO_InitStruct.Alternate = GPIO_AF7_USART2;
        	HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
        }
        HAL_NVIC_SetPriority(USART2_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(USART2_IRQn);
        huart2.Instance->CR1 |= USART_CR1_RXNEIE;
        com4 = true;
	}

}

void SerialClose(int comnbr) {

	if(comnbr == 1 && com1) {
		if (HAS_64PINS){
		  HAL_UART_DeInit(&huart3);
		}else{
		  HAL_UART_DeInit(&huart1);
		}
		com1 = false;
		com1_interrupt = NULL;
        PinSetBit(COM1_RX_PIN, CNPUCLR);                            // clear the pullup or pulldown on Rx
        PinSetBit(COM1_RX_PIN, CNPDCLR);
		ExtCfg(COM1_RX_PIN, EXT_NOT_CONFIG, 0);
		ExtCfg(COM1_TX_PIN, EXT_NOT_CONFIG, 0);
		FreeMemory(com1Rx_buf);
		FreeMemory(com1Tx_buf);
	}

	else if(comnbr == 2 && com2) {
		HAL_UART_DeInit(&huart6);
		com2 = false;
		com2_interrupt = NULL;
        PinSetBit(COM2_RX_PIN, CNPUCLR);                            // clear the pullup or pulldown on Rx
        PinSetBit(COM2_RX_PIN, CNPDCLR);
		ExtCfg(COM2_RX_PIN, EXT_NOT_CONFIG, 0);
		ExtCfg(COM2_TX_PIN, EXT_NOT_CONFIG, 0);
		FreeMemory(com2Rx_buf);
		FreeMemory(com2Tx_buf);
	}
	else if(comnbr == 3 && com3) {
		HAL_UART_DeInit(&huart4);
		com3 = false;
		com3_interrupt = NULL;
        PinSetBit(COM3_RX_PIN, CNPUCLR);                            // clear the pullup or pulldown on Rx
        PinSetBit(COM3_RX_PIN, CNPDCLR);
		ExtCfg(COM3_RX_PIN, EXT_NOT_CONFIG, 0);
		ExtCfg(COM3_TX_PIN, EXT_NOT_CONFIG, 0);
		FreeMemory(com3Rx_buf);
		FreeMemory(com3Tx_buf);
	}
	else if(comnbr == 4 && com4) {
		HAL_UART_DeInit(&huart2);
		com4 = false;
		com4_interrupt = NULL;
        PinSetBit(COM4_RX_PIN, CNPUCLR);                            // clear the pullup or pulldown on Rx
        PinSetBit(COM4_RX_PIN, CNPDCLR);
		ExtCfg(COM4_RX_PIN, EXT_NOT_CONFIG, 0);
		ExtCfg(COM4_TX_PIN, EXT_NOT_CONFIG, 0);
		FreeMemory(com4Rx_buf);
		FreeMemory(com4Tx_buf);
	}

}

int SerialGetchar(int comnbr) {
	int c;
    c = -1;                                                         // -1 is no data
	if(comnbr == 1) {
	  if(HAS_64PINS){
	    huart3.Instance->CR1 &= ~USART_CR1_RXNEIE;
		if(com1Rx_head != com1Rx_tail) {                            // if the queue has something in it
			c = com1Rx_buf[com1Rx_tail];                            // get the char
 			com1Rx_tail = (com1Rx_tail + 1) % com1_buf_size;        // and remove from the buffer
		}
		huart3.Instance->CR1 |= USART_CR1_RXNEIE;
	  }else{
	    huart1.Instance->CR1 &= ~USART_CR1_RXNEIE;
		if(com1Rx_head != com1Rx_tail) {                            // if the queue has something in it
			c = com1Rx_buf[com1Rx_tail];                            // get the char
 			com1Rx_tail = (com1Rx_tail + 1) % com1_buf_size;        // and remove from the buffer
		}
	    huart1.Instance->CR1 |= USART_CR1_RXNEIE;
	  }
	}
	else if(comnbr == 2) {

	    huart6.Instance->CR1 &= ~USART_CR1_RXNEIE;
		if(com2Rx_head != com2Rx_tail) {                            // if the queue has something in it
			c = com2Rx_buf[com2Rx_tail];                            // get the char
 			com2Rx_tail = (com2Rx_tail + 1) % com2_buf_size;        // and remove from the buffer
		}
	    huart6.Instance->CR1 |= USART_CR1_RXNEIE;
	}
	else if(comnbr == 3) {

	    huart4.Instance->CR1 &= ~USART_CR1_RXNEIE;
		if(com3Rx_head != com3Rx_tail) {                            // if the queue has something in it
			c = com3Rx_buf[com3Rx_tail];                            // get the char
 			com3Rx_tail = (com3Rx_tail + 1) % com3_buf_size;        // and remove from the buffer
		}
	    huart4.Instance->CR1 |= USART_CR1_RXNEIE;
	}
	else if(comnbr == 4) {

	    huart2.Instance->CR1 &= ~USART_CR1_RXNEIE;
		if(com4Rx_head != com4Rx_tail) {                            // if the queue has something in it
			c = com4Rx_buf[com4Rx_tail];                            // get the char
 			com4Rx_tail = (com4Rx_tail + 1) % com4_buf_size;        // and remove from the buffer
		}
	    huart2.Instance->CR1 |= USART_CR1_RXNEIE;
	}
	return c;
}
